--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.devtools.ksp'
+    id 'com.chaquo.python'
 }
 
 android {
@@ -18,6 +19,17 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
             useSupportLibrary true
+        }
+
+        python {
+            version "3.10"
+            pip {
+                install "pydub"
+                install "pytube"
+            }
+        }
+        ndk {
+            abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
         }
     }
 
@@ -72,4 +84,11 @@ dependencies {
 //    Room
     ksp "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+
+//    implementation 'com.github.HaarigerHarald:android-youtubeExtractor:master-SNAPSHOT'
+//    implementation 'com.github.yausername.youtubedl-android:library:-SNAPSHOT'
+//    implementation 'com.github.yausername.youtubedl-android:ffmpeg:-SNAPSHOT'
+    implementation 'com.arthenica:mobile-ffmpeg-full:4.4'
+    implementation 'com.github.sealedtx:java-youtube-downloader:3.2.3'
+
 }
