--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-sdk android:minSdkVersion="23" android:targetSdkVersion="33"/>
 
     <application
+        android:requestLegacyExternalStorage="true"
+        android:extractNativeLibs="true"
         android:name=".PlayleastApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,6 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Playleast"
         tools:targetApi="31">
+        <meta-data android:resource="@xml/automotive_app_desc"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
