--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,4 +91,6 @@ dependencies {
     implementation 'com.arthenica:mobile-ffmpeg-full:4.4'
     implementation 'com.github.sealedtx:java-youtube-downloader:3.2.3'
 
+    implementation ("com.pierfrancescosoffritti.androidyoutubeplayer:core:12.0.0")
+
 }
