--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,4 +93,6 @@ dependencies {
 
     implementation ("com.pierfrancescosoffritti.androidyoutubeplayer:core:12.0.0")
 
+    implementation "androidx.media:media:1.6.0"
+
 }
