--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,8 +60,11 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.10.1'
+//    implementation("androidx.core:core:1.12.0")
+//    implementation("androidx.core:core-role:1.0.0")
+//    implementation("androidx.core:core-animation:1.0.0-rc01")
+    androidTestImplementation("androidx.core:core-animation-testing:1.0.0-rc01")
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.activity:activity-compose:1.7.2'
