--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,9 +61,8 @@ android {
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.10.1'
-//    implementation("androidx.core:core:1.12.0")
-//    implementation("androidx.core:core-role:1.0.0")
-//    implementation("androidx.core:core-animation:1.0.0-rc01")
+    implementation("androidx.core:core:1.3.1")
+    implementation("androidx.media:media:1.2.0")
     androidTestImplementation("androidx.core:core-animation-testing:1.0.0-rc01")
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
