--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ plugins {
 
 android {
     namespace 'com.example.playleast'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.playleast"
@@ -60,9 +60,11 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.10.1'
-    implementation("androidx.core:core:1.3.1")
-    implementation("androidx.media:media:1.2.0")
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation("androidx.core:core:1.12.0")
+    implementation("androidx.core:core-role:1.0.0")
+    implementation("androidx.media:media:1.7.0")
+    implementation("androidx.core:core-animation:1.0.0-rc01")
     androidTestImplementation("androidx.core:core-animation-testing:1.0.0-rc01")
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
@@ -80,6 +82,7 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.navigation:navigation-compose:2.5.3'
     implementation ('com.pierfrancescosoffritti.androidyoutubeplayer:core:12.0.0')
     def room_version = "2.5.1"
