--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Playleast"
         tools:targetApi="31">
-        <receiver android:name=".MainActivity$BluetoothReceiver"
-            android:enabled="true"
+        <receiver android:name=".BluetoothReceiver"
             android:exported="true">
             <intent-filter android:priority="10000">
                 <action android:name="android.bluetooth.device.action.ACL_CONNECTED" />
