--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     implementation("androidx.core:core-role:1.0.0")
     implementation("androidx.media:media:1.7.0")
     implementation("androidx.core:core-animation:1.0.0-rc01")
+    implementation "androidx.datastore:datastore-preferences:1.1.1"
     androidTestImplementation("androidx.core:core-animation-testing:1.0.0-rc01")
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
