--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,6 +95,7 @@ dependencies {
 //    Room
     ksp "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+    implementation("org.burnoutcrew.composereorderable:reorderable:0.9.6")
 
 //    implementation 'com.github.HaarigerHarald:android-youtubeExtractor:master-SNAPSHOT'
 //    implementation 'com.github.yausername.youtubedl-android:library:-SNAPSHOT'
